src/test/ui/pattern/usefulness/non-exhaustive-match-nested.stderr
error[E0004]: non-exhaustive patterns: `(Some(&[]), Err(_))` not covered
  --> $DIR/non-exhaustive-match-nested.rs:5:11
   |
LL |     match (l1, l2) {
   |           ^^^^^^^^ pattern `(Some(&[]), Err(_))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(Option<&[T]>, Result<&[T], ()>)`

error[E0004]: non-exhaustive patterns: `A(C)` not covered
  --> $DIR/non-exhaustive-match-nested.rs:15:11
   |
LL | enum T { A(U), B }
   | ------------------
   | |        |
   | |        not covered
   | `T` defined here
...
LL |     match x {
   |           ^ pattern `A(C)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `T`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
